[package]
name = "emmett-crypto"
version = "0.4.0"
description = "Emmett framework cryptographic library"
authors = ["Giovanni Barillari <g@baro.dev>"]
license = "BSD-3-Clause"
edition = "2021"

keywords = ["emmett", "cryptography"]

readme = "README.md"
homepage = "https://emmett.sh"
repository = "https://github.com/emmett-framework/crypto"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/build.rs",
    "/LICENSE",
    "/README.md",
    "/src",
    "/emmett_crypto",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_crypto"
crate-type = ["cdylib"]

[dependencies]
aes = { version = "0.8" }
cfb8 = { version = "0.8" }
cfb-mode = { version = "0.8" }
ctr = { version = "0.9" }
pyo3 = { version = "=0.19", features = ["extension-module"] }
ring = { version = "0.16" }

[build-dependencies]
pyo3-build-config = { version = "=0.19", features = ["resolve-config"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
