[package]
name = "emmett-crypto"
version = "0.5.1"
description = "Emmett framework cryptographic library"
authors = ["Giovanni Barillari <g@baro.dev>"]
license = "BSD-3-Clause"
edition = "2021"

keywords = ["emmett", "cryptography"]

readme = "README.md"
homepage = "https://emmett.sh"
repository = "https://github.com/emmett-framework/crypto"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/LICENSE",
    "/README.md",
    "/src",
    "/emmett_crypto",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_crypto"
crate-type = ["cdylib"]

[dependencies]
aes = { version = "0.8" }
cfb8 = { version = "0.8" }
cfb-mode = { version = "0.8" }
ctr = { version = "0.9" }
pyo3 = { version = "=0.20", features = ["extension-module", "generate-import-lib"] }
ring = { version = "0.16" }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
